--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,5 +18,5 @@ spring.flyway.baseline-on-migrate=true
 
 server.port=8080
 
-#public_key=classpath:/public_key.pem
-#private_key=classpath:/private_key.pem
+public_key=classpath:/public_key.pem
+private_key=classpath:/private_key.pem
