--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=prod
 
-spring.datasource.url=${URL_DB}:${PORT_DB}/${NAME_DB}
+spring.datasource.url=${URL_DB}
 spring.datasource.username=${USER_DB}
 spring.datasource.password=${PASS_DB}
 
@@ -17,5 +17,5 @@ spring.flyway.baseline-on-migrate=true
 
 server.port=8080
 
-public_key=${PUB_KEY}
-private_key=${PRIV_KEY}
+public_key=classpath:/public_key.pem
+private_key=classpath:/private_key.pem
